# backhand

./: .gitignore  .stylish-haskell.yaml  .travis.yml  Main.hs  README.md  backhand.cabal  dev-shell  release.nix  stack.yaml
Backhand/: Connection.hs  Core.hs  Room.hs
Backhand/Behavior/: Chat.hs  Players.hs  Reversi.hs
Backhand/Room/: Handle.hs  Internal.hs  Monad.hs  Types.hs
Backhand/Util/: Aeson.hs  Auto.hs
Control/Concurrent/STM/: TRLock.hs
backhand/: .stylish-haskell.yaml  LICENSE  README.md  backhand.cabal  stack.yaml
backhand-chat/: README.md  backhand-chat.cabal  stack.yaml
backhand-chat/src/Backhand/Modules/Lobby/: Chat.hs
backhand-reversi/: README.md  backhand-reversi.cabal  stack.yaml
backhand/doc/: design.md  roadmap.md
backhand/src/: Backhand.hs
backhand/src/Backhand/: Channel.hs  Connection.hs  Lobby.hs  Message.hs  Requester.hs  Unagi.hs  Unique.hs
backhand/src/Backhand/Channel/: Components.hs
backhand/test/: Test.hs
modules/lobby-chat/: backhand-lobby-chat.cabal  stack.yaml
modules/lobby-chat/src/Backhand/Modules/Lobby/: Chat.hs
modules/reversi/: backhand-reversi.cabal  stack.yaml
modules/reversi/src/Backhand/Modules/: Reversi.hs
modules/reversi/src/Game/: Reversi.hs
