-- The name of the package.
name:                backhand

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.0.0.0

-- A short (one-line) description of the package.
synopsis:            Back-end connection management system for Internet card games.

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Forkk

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          forkk@forkk.net

-- A copyright notice.
-- copyright:           

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10


executable backhand
  main-is: Main.hs
  default-language: Haskell2010
  ghc-options: -fprof-auto -rtsopts -threaded -Wall
    -fno-warn-unused-do-bind -fno-warn-orphans
  -- exposed-modules: Backhand.Core
  --                , Backhand.Connection
  other-modules: Backhand.Behavior.Chat
               , Backhand.Behavior.Players
               , Backhand.Behavior.Reversi
               , Backhand.Connection
               , Backhand.Core
               , Backhand.Room
               , Backhand.Room.Handle
               , Backhand.Room.Internal
               , Backhand.Room.Monad
               , Backhand.Room.Types
               , Backhand.Util.Aeson
               , Backhand.Util.Auto
               , Control.Concurrent.STM.TRLock

  -- Other library packages from which modules are imported.
  build-depends: base >=4.6   && <4.9
               -- Concurrency
               , async
               , stm
               , stm-chans
               -- Monads and Stuff
               , mtl
               , transformers
               , lifted-base
               , monad-control
               , resourcet
               -- Data structures
               , containers
               , unordered-containers
               , bimap
               , time
               -- Text and binary data
               , text
               , bytestring
               , matrix
               -- Data Processing and Parsing
               , aeson
               -- Network
               , websockets
               -- Other
               , auto
