name:                backhand-chat
version:             0.1.0
synopsis:            Chat service for backhand
description:         Please see README.md
license:             BSD3
license-file:        LICENSE
author:              Michael Borden
maintainer:          Michael Borden <michael@quiet.space
copyright:           2017 Quiet Space

build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Backhand.Modules.Lobby.Chat
  build-depends:       backhand
                     , base >= 4.7 && < 5
                     , containers
                     , text
                     , unagi-chan
                     , unordered-containers
  default-language:    Haskell2010
