-- The name of the package.
name:                backhand

-- The package version.  See the Haskell package versioning policy (PVP) 
-- for standards guiding when and how versions should be incremented.
-- http://www.haskell.org/haskellwiki/Package_versioning_policy
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
version:             0.1.0.0

-- A short (one-line) description of the package.
synopsis:            Back-end connection management system for Internet card games.

-- A longer description of the package.
-- description:         

-- The license under which the package is released.
license:             MIT

-- The file containing the license text.
license-file:        LICENSE

-- The package author(s).
author:              Andrew Okin

-- An email address to which users can send suggestions, bug reports, and 
-- patches.
maintainer:          Michael Borden (@taksuyu) <michael@ispabuse.org>

-- A copyright notice.
copyright:           2015 Quiet Space

category:            Web

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a 
-- README.
-- extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
cabal-version:       >=1.10

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Backhand
                  , Backhand.Channel
                  , Backhand.Connection
                  , Backhand.Unique
  other-modules:    Backhand.Channel.Components
  build-depends:    base >= 4.8 && < 5
                  , hashable
                  , stm
                  , stm-containers
                  , unagi-chan
  default-language: Haskell2010

test-suite backhand-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  ghc-options:      -Wall -threaded
  build-depends:    base
                  , backhand
                  , stm
                  , stm-containers
                  , tasty
                  , tasty-hunit
                  , unagi-chan
  default-language: Haskell2010
