name:                backhand
version:             0.3.0
synopsis:            Back-end session management toolkit.
license:             MIT
license-file:        LICENSE
author:              Andrew Okin, Michael Borden
maintainer:          Michael Borden <michael@quiet.space>
copyright:           2015 Quiet Space

category:            Web
build-type:          Simple
cabal-version:       >=1.10

extra-source-files: README.md

library
  hs-source-dirs:   src
  ghc-options:      -Wall
  exposed-modules:  Backhand
                  , Backhand.Channel
                  , Backhand.Lobby
                  , Backhand.Message
                  , Backhand.Unique
  -- other-modules:
  build-depends:    base >= 4.8 && < 5
                  , aeson
                  , hashable
                  , list-t
                  , random
                  , semigroupoids
                  , stm
                  , stm-containers
                  , text
                  , unagi-chan
                  , unique
                  , uuid
                  , vector
  default-language: Haskell2010

test-suite backhand-test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Test.hs
  ghc-options:      -Wall -threaded
  build-depends:    base
                  , backhand
                  , containers
                  , hashable
                  , QuickCheck
                  , stm
                  , stm-containers
                  , unagi-chan
  default-language: Haskell2010
