name:                backhand-lobby-chat
version:             0.1.0.0
-- synopsis:            Initial project template from stack
description:         Please see README.md
-- homepage:            https://github.com/githubuser/lobby-chat#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Backhand.Modules.Lobby.Chat
  build-depends:       backhand
                     , base >= 4.7 && < 5
                     , containers
                     , text
                     , unagi-chan
                     , unordered-containers
  default-language:    Haskell2010

-- executable lobby-chat-exe
--   hs-source-dirs:      app
--   main-is:             Main.hs
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   build-depends:       base
--                        ,
--                      , lobby-chat
--   default-language:    Haskell2010

-- test-suite lobby-chat-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , lobby-chat
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

-- source-repository head
--   type:     git
--   location: https://github.com/githubuser/lobby-chat
