name:                backhand-reversi
version:             0.1.0.0
synopsis:            Reversi module for backhand
description:         Please see README.md
license:             MIT
license-file:        LICENSE
author:              Michael Borden (@taksuyu)
maintainer:          Michael Borden (@taksuyu) <michael@ispabuse.org>
copyright:           2015 Quiet Space
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Backhand.Modules.Reversi
  build-depends:       base >= 4.7 && < 5
                     , backhand
                     , matrix
                     , text
  default-language:    Haskell2010
